--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I am Full Stack Developer who specializes in JavaScript Technologies throughout the entire stack (Node.js, Express, React, Vue and MongoDB). Experience developing full-fledged web applications using backend API systems."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>Alexander Joshua</title>
   </head>
   <body>
